--- a/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
+++ b/Baro.CoreLibrary/Baro.CoreLibrary.Net.csproj
@@ -26,6 +26,7 @@
     <DocumentationFile>
     </DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
+    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -156,8 +157,10 @@
     <Compile Include="Serializer3\data\IBinaryWriter.cs" />
     <Compile Include="Serializer3\data\IMessageContent.cs" />
     <Compile Include="Serializer3\Message.cs" />
-    <Compile Include="Serializer3\MessageInbox.cs" />
+    <Compile Include="Serializer3\MessageAttribute.cs" />
     <Compile Include="Serializer3\MessageRegistration.cs" />
+    <Compile Include="Serializer3\MessageSettings.cs" />
+    <Compile Include="Serializer3\MessageUtils.cs" />
     <Compile Include="Spatial\RTreeMemory.cs" />
     <Compile Include="Spatial\TreeNodes.cs" />
     <Compile Include="Text\Encoding.cs" />
